# lawqa-rag-studio

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
config/: config.gemma-3-12b.yaml  config.gemma-3-27b.yaml  config.gpt-5-2.yaml  config.gpt-oss.docker.yaml  config.gpt-oss.yaml  config.yaml
data/lawqa_jp/: law_list.dev.json
docs/: config_options.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChatInterface.module.css  ChatInterface.tsx
frontend/src/styles/: global.css
src/lawqa_rag_studio/: __init__.py  cli.py
src/lawqa_rag_studio/chunking/: __init__.py  base.py  fixed.py  hierarchy.py
src/lawqa_rag_studio/clients/: __init__.py  openai_client.py
src/lawqa_rag_studio/config/: __init__.py  constants.py  loader.py  schema.py
src/lawqa_rag_studio/data/: __init__.py  egov_downloader.py  egov_parser.py  law_tree.py  lawqa_loader.py  markdown_exporter.py
src/lawqa_rag_studio/embeddings/: __init__.py
src/lawqa_rag_studio/eval/: __init__.py  metrics.py  reporters.py  runner.py
src/lawqa_rag_studio/ingest/: pipeline.py
src/lawqa_rag_studio/llm/: __init__.py  base.py  lmstudio_openai_compat.py  openai_responses.py  openai_responses_agentic.py  simple.py
src/lawqa_rag_studio/rag/: __init__.py  (+1 more)
tests/fixtures/: sample_law.xml
tests/integration/: test_egov_parser_sample.py
tests/unit/: test_chunking.py  test_config_loader.py  test_contract_shapes.py  test_session_reset_api.py
tools/: generate_config_docs.py
(+19 files in other folders)
